ajusted routing for github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/Cardinals-Ticket/style.css" />
   </head>
   <body>
     <h1 class="title">Cardinals Ticket</h1>
@@ -42,7 +42,7 @@
     </form>
     <div class="ticket-container">
       <div class="ticket-header-container">
-        <img src="/images/header.png" />
+        <img src="/Cardinals-Ticket/images/header.png" />
       </div>
       <div class="ticket-content">
         <div class="game-title-container">
@@ -60,7 +60,7 @@
           <div id="row-and-seat" class="row">Row 11| Seat 19</div>
         </div>
         <div class="qr-code-container">
-          <img src="/images/qr.png" />
+          <img src="/Cardinals-Ticket/images/qr.png" />
         </div>
         <div class="qr-code-number">NB52-MQLDMTZY</div>
         <div class="terms-and-conditions">
