adjusted routing to script for index.html

--- a/index.html
+++ b/index.html
@@ -74,5 +74,5 @@
       </div>
     </div>
   </body>
-  <script src="/script.js"></script>
+  <script src="/Cardinals-Ticket//script.js"></script>
 </html>
