added changable stadium

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         placeholder="Thu, Apr 29 - 12:15 PM"
       />
       <input
+        id="stadium-input"
+        class="form-input"
+        type="text"
+        placeholder="Busch Stadium"
+      />
+      <input
         id="section-input"
         class="form-input"
         type="text"
