--- a/index.html
+++ b/index.html
@@ -1,84 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cardinal Ticket Replica</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/Cardinals-Ticket/style.css" />
-  </head>
-  <body>
-    <h1 class="title">Cardinals Ticket</h1>
-    <form>
-      <input
-        id="game-title-input"
-        class="form-input"
-        type="text"
-        placeholder="Philadelphia Phillies at St. Louis Cardinals Tickets"
-      />
-      <input
-        id="date-input"
-        class="form-input"
-        type="text"
-        placeholder="Thu, Apr 29 - 12:15 PM"
-      />
-      <input
-        id="stadium-input"
-        class="form-input"
-        type="text"
-        placeholder="Busch Stadium"
-      />
-      <input
-        id="section-input"
-        class="form-input"
-        type="text"
-        placeholder="Section 143D"
-      />
-      <input id="row-input" class="form-input" type="text" placeholder="11" />
-      <input id="seat-input" class="form-input" type="text" placeholder="19" />
-    </form>
-    <div class="ticket-container">
-      <div class="ticket-header-container">
-        <img src="/Cardinals-Ticket/images/header.png" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cardinal Ticket Replica</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+  <h1 class="title">Cardinals Ticket</h1>
+
+  <form>
+    <select name="team" id="team-select" class="form-input"></select>
+    <input id="game-title-input" class="form-input" type="text"
+      placeholder="Philadelphia Phillies at St. Louis Cardinals Tickets" />
+    <input id="date-input" class="form-input" type="text" placeholder="Thu, Apr 29 - 12:15 PM" />
+    <input id="section-input" class="form-input" type="text" placeholder="Section 143D" />
+    <input id="row-input" class="form-input" type="text" placeholder="11" />
+    <input id="seat-input" class="form-input" type="text" placeholder="19" />
+  </form>
+  <div class="ticket-container">
+    <div class="ticket-header-container">
+      <img src="/Cardinals-Ticket/images/cardinals-header.png" id="header-image"/>
+    </div>
+    <div class="ticket-content">
+      <div class="game-title-container">
+        <h3 class="game-title" id="game-title">
+          Philadelphia Phillies at St. Louis Cardinals Tickets (Lou Brock &
+          Bob Gibson Label Pin Set Giveaway)
+        </h3>
       </div>
-      <div class="ticket-content">
-        <div class="game-title-container">
-          <h3 class="game-title" id="game-title">
-            Philadelphia Phillies at St. Louis Cardinals Tickets (Lou Brock &
-            Bob Gibson Label Pin Set Giveaway)
-          </h3>
+      <div class="date-location-container">
+        <div id="date">Thu , Apr 29 - 12:15 PM</div>
+        <div id="location">Busch Stadium</div>
+      </div>
+      <div class="section-row-container">
+        <div id="section" class="section">Section 143D</div>
+        <div class="row">
+          Row <span id="row" class="row-span">11</span>|
+          <span style="margin-left: 10px">Seat</span>
+          <span id="seat" class="seat-span">19</span>
         </div>
-        <div class="date-location-container">
-          <div id="date">Thu , Apr 29 - 12:15 PM</div>
-          <div id="location">Busch Stadium</div>
+      </div>
+      <div class="qr-code-container">
+        <img src="/Cardinals-Ticket/images/qr.png" />
+      </div>
+      <div class="qr-code-number">NB52-MQLDMTZY</div>
+      <div class="terms-and-conditions">
+        <div class="print-tickets-not-accepted">
+          Printed Tickets will not be accepted
         </div>
-        <div class="section-row-container">
-          <div id="section" class="section">Section 143D</div>
-          <div class="row">
-            Row <span id="row" class="row-span">11</span>|
-            <span style="margin-left: 10px">Seat</span>
-            <span id="seat" class="seat-span">19</span>
-          </div>
-        </div>
-        <div class="qr-code-container">
-          <img src="/Cardinals-Ticket/images/qr.png" />
-        </div>
-        <div class="qr-code-number">NB52-MQLDMTZY</div>
-        <div class="terms-and-conditions">
-          <div class="print-tickets-not-accepted">
-            Printed Tickets will not be accepted
-          </div>
-          <div class="terms-link">
-            <a class="terms" href="https://google.com">Terms and Conditions</a>
-          </div>
+        <div class="terms-link">
+          <a class="terms" href="https://google.com">Terms and Conditions</a>
         </div>
       </div>
     </div>
-  </body>
-  <script src="/Cardinals-Ticket/script.js"></script>
+  </div>
+</body>
+<script src="/Cardinals-Ticket/script.js"></script>
+<!-- <script src="/Cardinals-Ticket/script.js"></script> -->
+
 </html>
